--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run build && npx serve -s build",
+    "start:dev": "react-scripts start",
+    "start:lean": "GENERATE_SOURCEMAP=false FAST_REFRESH=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "serve": "^14.2.4",
     "webpack-bundle-analyzer": "^4.10.2"
   }
 }
