--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
-    "compression": "^1.8.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
@@ -27,7 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run build && node server.js",
     "start:dev": "react-scripts start",
     "start:lean": "GENERATE_SOURCEMAP=false FAST_REFRESH=false react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
