Refactor for OCI

--- a/env.example
+++ b/env.example
@@ -1,8 +1,8 @@
-# Auth0 Configuration
-REACT_APP_AUTH0_DOMAIN=your-auth0-domain.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=your-auth0-client-id
-AUTH0_MGMT_DOMAIN=your-auth0-domain.auth0.com
-REACT_APP_AUTH0_AUDIENCE=https://your-auth0-domain.auth0.com/api/v2/
+# Okta Configuration
+REACT_APP_OKTA_DOMAIN=your-okta-domain.okta.com
+REACT_APP_OKTA_CLIENT_ID=your-okta-client-id
+REACT_APP_OKTA_ISSUER=https://your-okta-domain.okta.com/oauth2/default
+REACT_APP_OKTA_REDIRECT_URI=http://localhost:3000/login/callback
 
 # App Configuration (Optional - for optimization)
 REACT_APP_OPTIMIZE_BUNDLE=true
